# cpp-template

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  solution.cpp  solution.h
test/: CMakeLists.txt  gtest.cpp
